--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.8",
+    "@hookform/error-message": "^2.0.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -20,6 +21,7 @@
     "i18next-http-backend": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.36.0",
     "react-i18next": "^11.18.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.1.1",
