--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -15,6 +15,10 @@ server {
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade ${DOLLAR}http_upgrade;
-        proxy_set_header Connection "Upgrade";        
+        proxy_set_header Connection "Upgrade";
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 }
