--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^2.0.8",
+    "@heroicons/react": "^2.0.12",
     "@hookform/error-message": "^2.0.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "async-mutex": "^0.4.0",
+    "classnames": "^2.3.2",
     "history": "^5.1.0",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
