--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "async-mutex": "^0.4.0",
     "classnames": "^2.3.2",
     "history": "^5.1.0",
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.36.0",
     "react-i18next": "^11.18.6",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.0-next.60",
